workloads/wanderfall/ghost/ghost.statefulset.yaml
---

apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: ghost
  namespace: wanderfall
  annotations:
    flux.weave.works/automated: "true"
    flux.weave.works/tag.ghost: regexp:^2(\.[0-9]+){2}-alpine$
  labels:
    app.kubernetes.io/name: ghost

spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ghost
      tier: frontend
      track: stable
  serviceName: ghost
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ghost
        tier: frontend
        track: stable
    spec:
      containers:
      - name: ghost
        image: ghost:2.19.3-alpine
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: content
          mountPath: /var/lib/ghost/content
        ports:
        - name: http
          containerPort: 2368
        livenessProbe: &probe
          httpGet:
            path: /
            port: http
            httpHeaders:
            - name: Host
              value: wanderfallgames.com
            - name: X-Forwarded-Proto
              value: https
          initialDelaySeconds: 5
        readinessProbe: *probe
  volumeClaimTemplates:
  - metadata:
      name: content
      annotations:
        volume.alpha.kubernetes.io/storage-reclaimPolicy: Retain
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 4Gi
